[gd_scene load_steps=5 format=3 uid="uid://bbkwji43erx3k"]

[ext_resource type="AudioStream" uid="uid://crc4jlw7vaejw" path="res://assets/musics/knock-knock-horror-creepy-scary-thriller-trailer-teaser-177239.mp3" id="1_1cjpm"]
[ext_resource type="Script" path="res://scenes/menu.gd" id="1_rqwbj"]
[ext_resource type="Theme" uid="uid://cdgc6sn7kq327" path="res://assets/BlackWhite.tres" id="4_6r57p"]
[ext_resource type="VideoStream" path="res://videos.ogv" id="4_uvsc0"]

[node name="Menu" type="CanvasLayer"]
script = ExtResource("1_rqwbj")

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stream = ExtResource("4_uvsc0")
autoplay = true
expand = true
loop = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 201.0
offset_top = -170.0
offset_right = 368.0
offset_bottom = 170.0
grow_vertical = 2

[node name="Start" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("4_6r57p")
text = "Start"

[node name="LeaderBoard" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("4_6r57p")
text = "Leaderboard
"

[node name="ChangeName" type="Button" parent="VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 100)
layout_mode = 2
theme = ExtResource("4_6r57p")
text = "Change name
"

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("1_1cjpm")
volume_db = -20.0
autoplay = true

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="VBoxContainer/LeaderBoard" to="." method="_on_leader_board_pressed"]
[connection signal="pressed" from="VBoxContainer/ChangeName" to="." method="_on_change_name_pressed"]
